[package]
name = "warp_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "*"
# 日志
log = "*"
log4rs = "1.1.1"
# 系列化工具
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.82"
schemars = "0.8.11"
serde_yaml = "0.9.17"
# sql工具
sqlx = {version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"]}
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
warp = "*"
# 单例
lazy_static = "1.4.0"
once_cell = "1.17.0"